# EXOcode

./: .gitignore  CHANGELOG.md  Cargo.toml  EXOCODE_ARCHITECTURE.md  LICENSE  README.md
exocode_core/: Cargo.toml
exocode_core/src/: lib.rs
src/: exobyte_format.rs  exobyte_vm.rs  frontend.rs  lib.rs  main.rs  parser.rs
tests/: golden_exobyte.rs
tests/golden/: call_ret.exb  empty_main.exb  match_quad.exb
